crates/good_fences/tests/good_fences_integration/src/parseError/parseError.ts
imprt { componentA } from '../index.ts'